--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: '3'
 services:
   jenkins_master:
     restart: always
-    image: jenkins:latest
+    build: 
+      context: .
+      args:
+        dockergroupid: ${DOCKER_GROUP_ID}
+    image: gtunon/docker_master:beta
     container_name: jenkins_master
     volumes:
       - jenkins_home:/var/jenkins_home
       - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/var/run/docker.sock
       - /home/ubuntu/dockerImages:/home/ubuntu/dockerImages
       - built_jars:/home/ubuntu/shared/jars
-      - /usr/bin/docker:/usr/bin/docker
     ports:
       - "8081:8080"
       - "50000:50000"
